# dialogc_vs2022_mingw

./: readme.md
dialogc/: CMakeLists.txt  CMakePresets.json
